packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-006.ttrp
// expect: TTRP-SQL-006
container c target erp_pg """sql
SELECT (SELECT id FROM u) FROM t
"""
